--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,16 @@
 body {
 	font-family: system-ui, Helvetica, Arial, sans-serif;
 }
+
+header {
+	padding: 1rem;
+	background-color: rgb(245, 245, 245);
+	h1 {
+		margin: 0 2rem;
+	}
+}
+
+.container {
+	max-width: 1000px;
+	margin: 0 auto;
+}
