--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,42 @@ header {
 	}
 }
 
+img {
+	max-width: 100%;
+}
+
 .container {
-	max-width: 1000px;
+	max-width: 1100px;
 	margin: 0 auto;
+}
+
+.actors-list {
+	list-style: none;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+}
+
+.card {
+	display: flex;
+	border: 1px solid black;
+	flex-grow: 0;
+	flex-shrink: 1;
+	min-height: 200px;
+	width: 350px;
+	img {
+		height: 200px;
+	}
+}
+
+.card-body {
+	padding: 1rem;
+
+	.bold {
+		font-weight: 600;
+	}
+
+	* + * {
+		padding: 0.2rem;
+	}
 }
