--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,11 @@ img {
 		font-weight: 600;
 	}
 
-	* + * {
+	& > * + * {
 		padding: 0.2rem;
+	}
+
+	.most-famous-movies {
+		list-style: none;
 	}
 }
